_sources/auto_examples/no_output/plot_syntaxerror.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_auto_examples_no_output_plot_syntaxerror.py>` to download the full example code or run this example in your browser via Binder
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_examples_no_output_plot_syntaxerror.py:


SyntaxError
===========

Example script with invalid Python syntax



.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/circleci/project/examples/no_output/plot_syntaxerror.py", line 14
        Invalid Python code
                     ^
    SyntaxError: invalid syntax





.. code-block:: python3

    # -*- coding: utf-8 -*-
    """
    Example with SyntaxError
    ========================

    Sphinx-Gallery uses Python's AST parser, thus you need to have written
    valid python code for Sphinx-Gallery to parse it. If your script has a
    SyntaxError you'll be presented the traceback and the original code.

    """
    # Code source: Óscar Nájera
    # License: BSD 3 clause

    Invalid Python code


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.208 seconds)

**Estimated memory usage:**  8 MB


.. _sphx_glr_download_auto_examples_no_output_plot_syntaxerror.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example


  .. container:: binder-badge

    .. image:: https://mybinder.org/badge_logo.svg
      :target: https://mybinder.org/v2/gh/sphinx-gallery/sphinx-gallery.github.io/master?urlpath=lab/tree/notebooks/auto_examples/no_output/plot_syntaxerror.ipynb
      :width: 150 px


  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_syntaxerror.py <plot_syntaxerror.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_syntaxerror.ipynb <plot_syntaxerror.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
